# pyo3_module

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  example.py  setup.py  test_sample.py
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst
docs/usage/: quickstart.rst
sample_module/: __init__.py  sample_module.pyi  subi.pyi
src/: lib.rs
