[package]
name = "sample_module"
version = "0.1.0"
authors = ["Matti Astrand <mattiastr@gmail.com>"]
edition = "2021"

[dependencies]
pyo3 = "0.15"
numpy = "0.15"
ndarray = "0.15"
rand = "*"
rand_core = "*"
rand_pcg = "*"
rayon = "1.5"
thiserror = "*"

[lib]
name = "sample_module"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]
