[package]
name = "sample_module"
version = "0.1.0"
authors = ["Matti Astrand <mattiastr@gmail.com>"]
edition = "2024"

[dependencies]
pyo3 = "0.23"
numpy = "0.23"
ndarray = "0.16"
rand = "0.9"
rand_core = "0.9"
rand_pcg = "0.9"
rand_seeder = "0.4"
rayon = "1.10"
thiserror = "2.0"

[lib]
name = "sample_module"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]
